responsive des data_wrap terminer reste a gerer correctement le wrap

--- a/site/afficheur.css
+++ b/site/afficheur.css
@@ -254,17 +254,27 @@ form > div:nth-child(2){
     /* --- wrap_de_data--- */
 
 .wrap_data{
-    width: 160px;
-    height: 60px;
+    width: calc(100px + 15vw);
+    height: calc(40px + 5vw);
+    min-width: 160px;
+    max-width: 210px;
+    min-height: 60px;
+    max-height: 78px;
+
     background-color: white;
     text-align: start;
     margin-bottom: 12px;
 }
 
 .trait_noir{
+    width: calc(100px + 15vw);
+    height: calc(30px + 5vw);
+    min-width: 160px;
+    max-width: 210px;
+    min-height: 50px;
+    max-height: 68px;
+
     position: absolute;
-    width: 160px;
-    height: calc(60px - 10px);
     border-bottom: solid 10px #b8b8b8;
     outline: 9px solid white;
     outline-offset: -9px;
@@ -272,16 +282,22 @@ form > div:nth-child(2){
 
 
 input[type="text"]{
+    width: calc(100px + 15vw);
+    height: calc(40px + 5vw);
+    min-width: 160px;
+    max-width: 210px;
+    min-height: 60px;
+    max-height: 78px;
+
+    position: absolute;
     padding-top: 17px;
-    height: 60px;
-    width: 160px;
     background-color: rgba(255, 255, 255, 0);
     border: solid black 1px;
-    position: absolute;
     text-align: center;
     font-size: 22px;
-    color: #373737;
     font-weight: 700;
+    color: #373737;
+    
 }
 
 .label_wrap_data{
@@ -294,20 +310,31 @@ input[type="text"]{
 }
 
 .wrap_data_button{
-    width: 160px;
-    height: 60px;
+    width: calc(100px + 15vw);
+    height: calc(40px + 5vw);
+    min-width: 160px;
+    max-width: 210px;
+    min-height: 60px;
+    max-height: 78px;
+
     text-align: center;
     margin-bottom: 12px;
 }
 
 
 div input[type="submit"]{
-    width: calc(160px - 20px);
-    height: 60px;
+
+    width: calc(80px + 15vw);
+    height: calc(40px + 5vw);
+    min-width: 140px;
+    max-width: 190px;
+    min-height: 60px;
+    max-height: 78px;
+
     font-size: 15px;
     font-weight: 500;
-    border-radius: 10px;
-    background-color: #2c82d2;
     color: #ffffff;
+    border-radius: 10px;
+    background-color: #2c82d2; 
     box-shadow: 2px -2px 5px rgba(0, 0, 0, 0.25);
 }
